web-app/css/custom.css
/* ... */
.user.show-user-role img.user-img + span{margin-top:1px;}
.user.show-user-role span.user-type{position:relative;top: inherit;left: inherit;border:0;}

.popover-user .popover-user-header .user span{
    display: inline-block;
    text-overflow: ellipsis;
    overflow: hidden;
    height: 19px;
    vertical-align: middle;
    width: 114px;
    white-space: nowrap;
}

.user-list-images,
.user-list-followers {padding: 0px 10px 0 !important;}
.panel.panel-default .panel-body .user-list-followers {margin-bottom:0px;}

.user-list-images li {list-style: none; display: inline-block !important; margin: 0 7px; width: auto;}
.user-list-images li:last-child {margin-right: 0;}
.user-list-followers > li {list-style: none; margin: 0 0 20px; width: 100%; position: relative; height: 38px;}
.user-list-followers > li:last-child {margin: 0;}
.user-list-followers li a {text-decoration: none;}
.user-list-followers.hide4 > li + li + li +li +li {display: none;}
.user-list-followers.hide3 > li + li + li +li {display: none;}
.user-list-followers.hide2 > li + li + li {display: none;}
.user-list-followers.hide4 > li + li + li +li {margin-bottom:0px;}
.user-list-followers.hide3 > li + li + li {margin-bottom:0px;}
.user-list-followers.hide2 > li + li {margin-bottom:0px;}

.user-list-followers .popover{margin-top:3px;left:-80px !important}
.owner .popover {margin-left:30px;}

/* lista de a quién seguir al inicio del Dashboard */
.condition .user-list-followers {margin: 0; padding: 0 !important;}
.condition .user-list-followers  > li {list-style: none; margin: 0 0 20px 0; width: 100%; float: none;}

.user a.popover-trigger:hover span,
.user a.popover-trigger:active span,
.user a.popover-trigger:focus span {text-decoration: underline;}
.user a.popover-trigger:hover,
.user a.popover-trigger:active,
.user a.popover-trigger:focus {text-decoration: none;}

.user-list-images li .popover-trigger .user-img {margin: 4px 2px 0 0;}
.user-list-images .more-users,
.user-list-followers .more-users {margin: 0;}
.author.important .user.actor.politic .user-list-images li .popover-trigger .user-img {margin: 0;}

.popover {width: 260px; max-width: 260px; border-radius: 0;}
.popover-content {padding: 9px;}
.popover-content p:last-child {margin: 0;}

.config .popover {font-size: 15px; font-size: 1.5rem; color: #a8a8a8;}
.config .popover-content {padding: 15px 10px 5px;}
.config .form-group .info-disabled,
.config .form-group .disabled {color: #a8a8a8;}

.more-users + .popover,
.more-actions + .popover {width: 225px;}
.popover.tour {width: 300px; max-width: 300px !important; padding: 8px;}
.popover.tour .popover-title {
    font-size: 20px;
    font-size: 2rem;
    line-height: 1;
    text-transform: uppercase;
    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
.popover.tour .popover-navigation > .btn,
.popover.tour .popover-navigation > .btn:hover,
.popover.tour .popover-navigation > .btn:focus {
    margin: 0 !important;
    display: block;
    font-size: 20px !important;
    font-size: 2rem !important;
}
.popover[class*=tour-] .popover-navigation button:first-child {float: left !important; width: 45%;}
.popover[class*=tour-] .popover-navigation button:last-child,
.popover[class*=tour-] .popover-navigation #totour2,
.popover[class*=tour-] .popover-navigation #totour3 {float: right !important; width: 45%;}
.popover.tour .popover-content {font-size: 12px;}
.popover.tour .popover-content,
.popover.tour .popover-navigation {padding: 6px 4px 10px 4px!important;}
.popover.tour .popover-navigation {width: 100%; height: 50px;}
.tour-step-background {background: none !important;}
.tour-backdrop {z-index:1000;}
.popover[class*="tour-"] {z-index: 1200 !important;}

.slimScrollBar {z-index: 9999 !important;}
.slimScrollRail,
.slimScrollBar {border-radius: 4px !important;}
.popover-content .close {position: absolute; top: 6px; right: 10px;}
.popover-content .close,
.modal-dialog .close {font-size: 22px; font-size: 2.2rem;}
.popover-trigger {cursor: pointer;}
/*.user-list-images .popover-trigger,
.user-list-followers .popover-trigger {display: inline-block; z-index: 998; position: relative;}*/

.user-list-images .popover-trigger,
.user-list-followers .popover-trigger {
    z-index: 998;
    position: relative;
    /*width: 170px;*/
    width: calc(100% - 125px);
    display: inline-block;
    line-height: 1.4;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.user-list-images .popover-trigger{
    width: 34px;
}

/*#main .user .popover-trigger { margin-bottom: 10px;}*/
#main .user.actor {font-size: 12.5px; font-size: 1.25rem; margin-bottom: 10px;}

/* popovers */
.popover {
    color: #545454;
    font-size: 14px;
    font-size: 1.4rem;
    -webkit-transition: opacity 0.5s ease 0.2s;
    -moz-transition: opacity 0.5s ease 0.2s;
    -o-transition: opacity 0.5s ease 0.2s;
    transition: opacity 0.5s ease 0.2s;
}
.popover .user-img {
    border-radius: 20px !important;
    width: 38px !important;
    height: 38px !important;
    display: inline-block !important;
}
.popover .user-type {
    color: #A8A8A8 !important;
/*    padding: 0 0 0 49px !important;
    margin: -18px 0 0 0!important;
    display: block !important;*/
}
.popover .scroll .user-type {margin-left: 1px !important;}
.popover .follow {width: auto; -webkit-border-radius: 2px !important; -moz-border-radius: 2px !important; border-radius: 2px !important; margin: 9px 0 0 0!important; float: right; padding: 6px 6px 5px !important; width: 80px !important;}
.popover-box .follow {margin: 1px 0 0 90px !important;}
.popover .infoActivity {border-top: solid 1px #dadada; margin: 6px 0 0; padding: 6px 0 0;}
.popover .infoActivity li {list-style: none; float: left; margin-right: 6px; font-size: 14px; font-size: 1.4rem; color: #797979;}
.popover .infoActivity .fa-check {color: #bfd9f5;}
.popover-user-list ul {margin: 0 20px 0 0 !important; padding: 0;}
.popover-user-list ul li {padding: 2px; display: block !important; margin: 0 0 5px 0;}
/* ... */

